nouveux moyen de recher via url et amélioration UI/UX

--- a/help.html
+++ b/help.html
@@ -51,16 +51,12 @@
                     </ul>
                 </li>
                 <li>Collez ce lien dans la barre de recherche du site.</li>
+                <li>Attention verifier bien que l'URL se termine avec g_ta__code=deschiffres ! <br>
+                    Car si on prendre cette formation https://dossier.parcoursup.fr/Candidats/public/fiches/afficherFicheFormation?g_ta_cod=16915&typeBac=0&originePc=0 
+                    <br>l'URL n'est pas bonne il faut mettre ceci : https://dossier.parcoursup.fr/Candidats/public/fiches/afficherFicheFormation?g_ta_cod=16915</li>
+
             </ol>
             <p>Et voilà, c’est prêt ! 🎉</p>
-
-
-            <p>J’ai remarqué que certaines informations sur les formations étaient accessibles ici :  
-                <a href="https://data.enseignementsup-recherche.gouv.fr/pages/parcoursupdata/?disjunctive.fili" target="_blank">
-                    Données officielles de l'enseignement supérieur</a>.
-            </p>  
-            <p>J’ai donc récupéré ces données et les ai intégrées au site afin de les rendre plus visibles.  
-                Vous avez ainsi accès à des informations complémentaires à celles disponibles sur Parcoursup.</p>
             
 
             
