--- a/help.html
+++ b/help.html
@@ -51,7 +51,7 @@
                     </ul>
                 </li>
                 <li>Collez ce lien dans la barre de recherche du site.</li>
-                <li>Attention verifier bien que l'URL se termine avec g_ta__code=deschiffres ! <br>
+                <li>Attention verifier bien que l'URL se termine avec g_ta__cod=deschiffres ! <br>
                     Car si on prendre cette formation https://dossier.parcoursup.fr/Candidats/public/fiches/afficherFicheFormation?g_ta_cod=16915&typeBac=0&originePc=0 
                     <br>l'URL n'est pas bonne il faut mettre ceci : https://dossier.parcoursup.fr/Candidats/public/fiches/afficherFicheFormation?g_ta_cod=16915</li>
 
